--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid" style="background-color: transparent">
                     <a class="navbar-brand" href="#">
-                        <img src="./Screenshot 2024-08-24 1.45.21 PM.png" alt="Logo TaskMate"
+                        <img src="Screenshot 2024-08-24 1.45.21 PM.png" alt="Logo TaskMate"
                             class="img-fluid">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
