--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="container col-6">
-                <img src="./imagenes/2 (1).png" class="rounded float-center" alt="TaskMate interfaz">
+                <img src="2 (1).png" class="rounded float-center" alt="TaskMate interfaz">
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-4">
                 <div class="feature row">
-                    <img src="./imagenes/Web Design.svg" alt="Interfaz Item">
+                    <img src="Web Design.svg" alt="Interfaz Item">
                     <h3>Interfaz Intuitiva</h3>
                     <p>TaskMate ofrece una interfaz limpia y fácil de usar, lo que permite a los usuarios agregar,
                         editar y
@@ -75,7 +75,7 @@
             </div>
             <div class="col-4">
                 <div class="feature row">
-                    <img src="./imagenes/Management.svg" alt="Gestión Item">
+                    <img src="Management.svg" alt="Gestión Item">
                     <h3>Gestión de Proyectos</h3>
                     <p class="row">Agrupa tus tareas en proyectos para mantenerte enfocado. Puedes asignar prioridades y
                         fechas límite
@@ -84,7 +84,7 @@
             </div>
             <div class="col-4">
                 <div class="feature row">
-                    <img src="./imagenes/Timesheet.svg" alt="Recordatorio Item">
+                    <img src="Timesheet.svg" alt="Recordatorio Item">
                     <h3>Recordatorios Inteligentes</h3>
                     <p>Configura recordatorios personalizados que te notificarán de las tareas pendientes, asegurando
                         que
@@ -148,7 +148,7 @@
                 <p>“TaskMate ha transformado la forma en que mi equipo y yo gestionamos nuestros proyectos. La interfaz
                     es tan sencilla que no perdemos tiempo aprendiendo a usarla, ¡solo la usamos!”.</p>
                 <div class="usuario row">
-                    <img class="col" src="./imagenes/testimonio1.jpeg" alt="Foto de Carlos">
+                    <img class="col" src="testimonio1.jpeg" alt="Foto de Carlos">
                     <div class="datos-usuario col-8">
                         <span class="row">Carlos Méndez</span>
                         <small class="row">CEO de Innovatech</small>
@@ -160,7 +160,7 @@
                 <p>“Como freelance, mantener el control de mis proyectos es vital. TaskMate me permite organizar mis
                     tareas por cliente y proyecto, lo que ha incrementado mi productividad”.</p>
                 <div class="usuario row">
-                    <img class="col" src="./imagenes/testimonio3.jpeg" alt="Foto de Lucía">
+                    <img class="col" src="testimonio3.jpeg" alt="Foto de Lucía">
                     <div class="datos-usuario col-8">
                         <div class="align-items-center">
                             <span class="row">Lucía Fernández</span>
@@ -174,7 +174,7 @@
                 <p>“La función de colaboración en equipo de TaskMate ha hecho que gestionar proyectos con equipos
                     remotos sea mucho más sencillo, nos ha ayudado a mejorar el rendimiento”.</p>
                 <div class="usuario row">
-                    <img class="col" src="./imagenes/testimonio2.png" alt="Foto de Raúl">
+                    <img class="col" src="testimonio2.png" alt="Foto de Raúl">
                     <div class="datos-usuario col-8">
                         <span class="row">Raúl García</span>
                         <small class="row">Jefe de Proyecto TechSolutions</small>
@@ -198,7 +198,7 @@
             </form>
 
             <div class="footer col">
-                <img src="./imagenes/Screenshot 2024-08-24 1.45.21 PM.png" class="logo col-lg" alt="Logo TaskMate">
+                <img src="Screenshot 2024-08-24 1.45.21 PM.png" class="logo col-lg" alt="Logo TaskMate">
                 <div class="row">
                     <ul class="col">
                         <li class="row"><a href="#inicio">Inicio</a></li>
@@ -220,12 +220,12 @@
                                 <div class="accordion-body">
                                     <span>(809)-XXX-XXXX</span>
                                     <span></span>contact@taskmateapp.com</span>
-                                    <a href="https:/x.com"><img src="./imagenes/TwitterX.svg" alt="Twitter logo"></a>
-                                    <a href="https:/facebook.com"><img src="./imagenes/Facebook.svg"
+                                    <a href="https:/x.com"><img src="TwitterX.svg" alt="Twitter logo"></a>
+                                    <a href="https:/facebook.com"><img src="Facebook.svg"
                                             alt="Facebook logo"></a>
-                                    <a href="https:/instagram.com"><img src="./imagenes/Instagram.svg"
+                                    <a href="https:/instagram.com"><img src="Instagram.svg"
                                             alt="Instagram logo"></a>
-                                    <a href="https:/linkedin.com"><img src="./imagenes/LinkedIn.svg"
+                                    <a href="https:/linkedin.com"><img src="LinkedIn.svg"
                                             alt="LinkedIn logo"></a>
                                 </div>
                             </div>
